Pagination and Full Text Search
Pagination and Full Text Search implemented by importing NgxPaginationModule and Ng2SearchPipeModule

--- a/src/app/navigation/top-navigation/top-navigation.component.html
+++ b/src/app/navigation/top-navigation/top-navigation.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
+<nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top ">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/home">
       <img src="assets/images/aktrix_logo.png" alt="Aktrix Logo"  class="rounded-pill">
