--- a/src/app/employee/view-employee/view-employee.component.html
+++ b/src/app/employee/view-employee/view-employee.component.html
@@ -1,6 +1,13 @@
+<div class="sec1">
+    <input type="text" placeholder="Search" [(ngModel)]="searchText"><br><br>
+</div>
+
+
+
+
 <div>
     <table>
-        <thead>
+        <thead class="sticky-top">
             <tr>
                 <th>Employee Id</th>
                 <th>First Name</th>
@@ -18,7 +25,7 @@
 
         <tbody>
 
-            <tr *ngFor="let employee of employees;">
+            <tr *ngFor="let employee of employees | filter:searchText |paginate:{itemsPerPage:count, currentPage:p}">
                 <td>{{employee.employeeId}}</td>
                 <td>{{employee.firstName}}</td>
                 <td>{{employee.lastName}}</td>
@@ -34,3 +41,6 @@
         </tbody>
     </table>
 </div>
+<div class="text-right">
+    <pagination-controls (pageChange)="p = $event"></pagination-controls>
+  </div>
