header-footer changes

--- a/src/app/employee/view-employee/view-employee.component.css
+++ b/src/app/employee/view-employee/view-employee.component.css
@@ -6,6 +6,13 @@ table, th, td {
     
     th {	text-align: center;
             background-color:#a7b6d9;
+           
     }
     td {	text-align: center;
+    }
+    
+    
+    table{
+        margin-top: 75px;
+
     }
