--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,1 +1,38 @@
 <!--<p>footer works!</p>-->
+
+    <div class="container-fluid footer  justify-content-center">
+        <div class=row>
+            <div class="col-2"></div>
+            <div class="col-2">
+                <h6>About Us</h6>
+                <p>Founders</p>
+                <p>Our Motto</p>
+                <p>Team</p>
+                <p>Achievements</p>
+            </div>
+
+            <div class="col-1"></div>
+            <div class="col-2">
+                <h6>Useful Links</h6>
+                <p>Careers</p>
+                <p>Downloads</p>
+                <p>Gallery</p>
+            </div>
+
+            <div class="col-1"></div>
+            <div class="col-2">
+                <h6>Contact</h6>
+
+                <Address>
+                    <div class="address">9027 Manchester Dr.
+                        Tiffin, OH 44883.<br>
+                        <a href="helpdesk@aktrix.com">helpdesk@aktrix.com</a>
+                    </div>
+                </Address>
+            </div>
+
+
+        </div>
+
+
+    </div>
