--- a/src/app/navigation/bottom-navigation/bottom-navigation.component.html
+++ b/src/app/navigation/bottom-navigation/bottom-navigation.component.html
@@ -1,5 +1,5 @@
 <!--<p>bottom-navigation works!</p>-->
-<nav class="nav navbar-expand bg-dark navbar-dark fixed-bottom  ">
+<nav class="nav navbar-expand bg-dark navbar-dark bottom  ">
     <div class="container-fluid">
         <ul class="nav nav-tabs justify-content-center">
             <li class="nav-item">
