--- a/src/app/navigation/top-navigation/top-navigation.component.html
+++ b/src/app/navigation/top-navigation/top-navigation.component.html
@@ -1,13 +1,13 @@
-<nav class="navbar navbar-expand-sm bg-dark navbar-dark sticky-top ">
+<nav class="navbar navbar-expand-sm bg-info  sticky-top ">
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/home">
-      <img src="assets/images/aktrix_logo.png" alt="Aktrix Logo"  class="rounded-pill">
-
+      <img src="assets/images/aktrix_logo.png" alt="Aktrix Logo" class="logo">
     </a>
+
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="nav nav-tabs">
         <li class="nav-item">
-          <a class="nav-link text-white" routerLink="/home">Home<i class="fa-regular fa-house-blank"></i></a>
+          <a class="nav-link text-white" routerLink="/home">Home</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" routerLink="/createEmployee">Create Employee</a>
@@ -15,15 +15,23 @@
         <li class="nav-item">
           <a class="nav-link text-white" routerLink="/viewEmployee">View Employee</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="">Login<i class="fa-regular fa-user"></i></a>
-        </li>
       </ul>
     </div>
-      <form class="d-flex">
-        <input class="form-control me-2" type="text" placeholder="Search">
-        <button class="btn btn-primary" type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
-      </form>
     
+    <ul class="nav nav-tabs justify-content-center">
+      <li>
+        <form class="d-flex">
+          <input class="form-control me-2" type="text" placeholder="Search">
+          <button class="btn btn-primary" type="button"><i class="fa-solid fa-magnifying-glass"></i></button>
+        </form>
+
+      </li>
+    </ul>
+    
+    <ul class="nav nav-tabs">
+      <li class="nav-item justify-content-end" style="float:right;">
+        <a class="nav-link text-white" href="">Login</a>
+      </li>
+    </ul>
   </div>
 </nav>
