--- a/src/app/employee/create-employee/create-employee.component.html
+++ b/src/app/employee/create-employee/create-employee.component.html
@@ -66,8 +66,7 @@
                     <div *ngIf="salary.errors?.['max']">Maximum Salary is Rs.1,00,000/-</div>
                 </div>
             </div>
-            <div class="mb-3">
-
+            <!-- <div class="mb-3">
                 <label for="JobId" class="form-label">Job Id</label>
                 <select class="form-select" aria-label="Default select example" name="jobId" ngModel #jobId="ngModel"
                     required>
@@ -86,24 +85,29 @@
                     <option value="HR_REP">HR_REP</option>
                     <option val ue="AC_ACCOUNT">AC_ACCOUNT</option>
                     <option value="AD_PRES">AD_PRES</option>
-                <label for="DepartmentId" class="form-label">Department Name</label>
+                    <label for="DepartmentId" class="form-label">Department Name</label>
                     <select class="form-select " name="departmentId" ngModel #departmentId="ngModel" required>
+                        <option *ngFor="let department of departments;" value="{{department.departmentId}}">
+                            {{department.departmentName}}</option>
+                    </select>
+                    <span *ngIf="departmentId.touched && !departmentId.valid">Select the Department Name</span>
+            </div> -->
+            <div class="mb-3">
+                <label for="DepartmentId" class="form-label">Department Name</label>
+
+                <select class="form-select " name="departmentId" ngModel #departmentId="ngModel" required>
                     <option *ngFor="let department of departments;" value="{{department.departmentId}}">
                         {{department.departmentName}}</option>
                 </select>
                 <span *ngIf="departmentId.touched && !departmentId.valid">Select the Department Name</span>
             </div>
-            <div class="mb-3">
-                <label for="JobId" class="form-label">Job Name</label>
-                <select class="form-select" name="jobId" ngModel #jobId="ngModel" required>
-                    <option *ngFor="let job of jobs;" value="{{job.jobTitle}}">{{job.jobTitle}}</option>
 
-                <label for="JobId" class="form-label">Job Name</label>
-                <select class="form-select" name="jobId" ngModel #jobId="ngModel"
-                    required>
-                    <option *ngFor="let job of jobs;" value="{{job.jobTitle}}">{{job.jobTitle}}</option>
-                </select>
-                <span *ngIf="jobId.touched && !jobId.valid">Select the Job Name</span>
+            <div class="mb-3">
+                    <label for="JobId" class="form-label">Job Name</label>
+                    <select class="form-select" name="jobId" ngModel #jobId="ngModel" required>
+                        <option *ngFor="let job of jobs;" value="{{job.jobTitle}}">{{job.jobTitle}}</option>
+                    </select>
+                    <span *ngIf="jobId.touched && !jobId.valid">Select the Job Name</span>
             </div>
             <div class="mb-3">
                 <label for="ManagerId" class="form-label">Manager Name</label>
@@ -127,15 +131,7 @@
                 <span *ngIf="managerId.touched && !managerId.valid">Select the Manager Name</span>
             </div>
 
-            <div class="mb-3">
-                <label for="DepartmentId" class="form-label">Department Name</label>
-
-                <select class="form-select " name="departmentId" ngModel #departmentId="ngModel" required>
-                    <option *ngFor="let department of departments;" value="{{department.departmentId}}">
-                        {{department.departmentName}}</option>
-                </select>
-                <span *ngIf="departmentId.touched && !departmentId.valid">Select the Department Name</span>
-            </div>
+           
 
         </div>
     </div>
