--- a/src/app/navigation/top-navigation/top-navigation.component.html
+++ b/src/app/navigation/top-navigation/top-navigation.component.html
@@ -13,7 +13,7 @@
           <a class="nav-link text-white" routerLink="/createEmployee">Create Employee</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" routerLink="/viewEmployee">View Employee</a>
+          <a class="nav-link text-white" routerLink="/viewemployee">View Employee</a>
         </li>
       </ul>
     </div>
