--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -18,6 +18,7 @@
                         <small *ngIf="password.touched && !password.valid" class="alert">
                             <span *ngIf="password.errors?.['required']">Password Required</span>
                             <span *ngIf="password.errors?.['minlength']">Password Must be of 4 characters</span>
+                        </small>
                         <input type="text" class="form-control mt-4" placeholder="User Name" name="userName" ngModel
                             #userName="ngModel" required autocomplete="off">
                         <small *ngIf="userName.touched && !userName.valid" class="alert">
@@ -29,6 +30,7 @@
                             <span *ngIf="passWord.errors?.['required']">Password Required</span>
                         </small>
                     </div>
+                    
                     <div class="form-group">
                         <button [disabled]="!loginForm.valid" class="btn btn-dark mt-4" type="submit">Sign In</button>
                     </div>
