--- a/src/app/employee/view-employee/view-employee.component.css
+++ b/src/app/employee/view-employee/view-employee.component.css
@@ -1,18 +1,21 @@
-table, th, td {
-    border: 1px solid black;
-    border-collapse:collapse;
-    width:auto;
-    }
-    
-    th {	text-align: center;
-            background-color:#a7b6d9;
-           
-    }
-    td {	text-align: center;
-    }
-    
-    
-    table{
-        margin-top: 75px;
+table,
+th,
+td {
+  border: 1px solid black;
+  border-collapse: collapse;
+  width: auto;
+}
 
-    }
+th {
+  text-align: center;
+  background-color: #a7b6d9;
+}
+
+td {
+  text-align: center;
+}
+
+table {
+  width: 100%;
+
+}
