--- a/src/app/navigation/top-navigation/top-navigation.component.html
+++ b/src/app/navigation/top-navigation/top-navigation.component.html
@@ -2,7 +2,6 @@
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/home">
       <img src="assets/images/aktrix_logo.png" alt="Aktrix Logo"  class="rounded-pill">
-
     </a>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="nav nav-tabs">
@@ -10,10 +9,10 @@
           <a class="nav-link text-white" routerLink="/home">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" routerLink="/createEmployee">Create Employee</a>
+          <a class="nav-link text-white" routerLink="/create">Create Employee</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-white" routerLink="/viewEmployee">View Employee</a>
+          <a class="nav-link text-white" routerLink="/view">View Employee</a>
         </li>
         <li class="nav-item">
           <a class="nav-link text-white" href="">Login</a>
