--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,9 @@
-<home-component></home-component>
-<!-- <router-outlet></router-outlet> -->
+<div>
+    <header-component></header-component>
+</div>
+<div>
+    <home-component></home-component>
+</div>
+<div>
+    <footer-component></footer-component>
+</div>
