--- a/src/app/navigation/top-navigation/top-navigation.component.html
+++ b/src/app/navigation/top-navigation/top-navigation.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-sm bg-dark navbar-dark ">
   <div class="container-fluid">
-    <a class="navbar-brand" routerLink="/home">
-      <img src="assets/images/aktrix_logo.png" alt="Aktrix Logo"  class="rounded-pill">
+    <a class="navbar-brand" routerLink="/home">Logo
+      <!-- <img src="assets/images/aktrix_logo.png" alt="Aktrix Logo"  class="rounded-pill"> -->
     </a>
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="nav nav-tabs">
@@ -14,14 +14,11 @@
         <li class="nav-item">
           <a class="nav-link text-white" routerLink="/view">View Employee</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link text-white" href="">Login</a>
-        </li>
       </ul>
     </div>
-      <form class="d-flex">
-        <input class="form-control me-2" type="text" placeholder="Search">
-        <button class="btn btn-primary" type="button">Search</button>
-      </form>
+    <form class="d-flex">
+      <input class="form-control me-2" type="text" placeholder="Search">
+      <button class="btn btn-primary" type="button">Search</button>
+    </form>
   </div>
 </nav>
