--- a/src/app/navigation/top-navigation/top-navigation.component.html
+++ b/src/app/navigation/top-navigation/top-navigation.component.html
@@ -18,7 +18,8 @@
     </div>
     <form class="d-flex">
       <input class="form-control me-2" type="text" placeholder="Search">
-      <button class="btn btn-primary" type="button">Search</button>
+      <button class="btn btn-primary" type="button">Search</button>&nbsp;&nbsp;&nbsp;
+      <button class="btn btn-warning" type="button" (click)="logout()">Lagout</button>
     </form>
   </div>
 </nav>
