--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
             <div class="card-header d-flex justify-content-center" style="background-color: rgb(12, 12, 0)">
                 <span class="ng text-light" style="font: size 22px; margin-top: 1px; ">AKTRIX</span>
             </div>
-            <div class="card-body text-center  text-dark">
+            <div id="card" class="card-body text-center  text-white">
                 <h2>Aktrix Login</h2>
                 <form #loginForm="ngForm" (ngSubmit)="onSubmit(loginForm)" class="text-left mt-4">
                     <div class="form-group">
